Fixed button style, shifted paragraph for landing

--- a/DiaperBankFront/src/app/landing/landing.component.css
+++ b/DiaperBankFront/src/app/landing/landing.component.css
@@ -19,5 +19,5 @@
 button {
     font-size: 150%;
     padding: 5px;
-    width: 100%;
+    width: 50%;
 }
